test/zinc_source/compile_errors/tuples/05_typed_destructure_wrong_element.zn
// expected-error: variable 'bad' expects a compatible 'f32' value

fn main() {
    good, bad: f32 = (1, "cat")
}
